# rs-application

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  api.http  config.toml.example  env.example  http-client.env.json
.agents/skills/frontend-miniprogram-release/: SKILL.md
.agents/skills/release-application-rs/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: build-image.yml  coding-linter.yml
.sisyphus/notepads/sort-and-empty-guide/: learnings.md
application/: Cargo.toml
application-api/: Cargo.toml
application-api/src/: lib.rs  routes.rs
application-api/src/request/: access_token.rs  user.rs
application-api/src/service/: access_token.rs  totp.rs
application-api/src/v1/: access_token.rs  totp.rs
application-database/: Cargo.toml
application-database/src/: lib.rs
application-database/src/account/: access_token.rs  mod.rs  refresh_token.rs  third_config.rs  third_user.rs  user.rs
application-database/src/entity/: mod.rs
application-database/src/entity/account/: access_token.rs  third_user.rs
application-database/src/entity/tool/: totp.rs
application-database/src/repository/: mod.rs
application-database/src/repository/account/: access_token.rs  third_user.rs  user.rs
application-database/src/repository/tool/: short_url.rs  totp.rs
application-database/src/tool/: short_url.rs  totp.rs
application-kernel/: Cargo.toml
application-kernel/src/: config.rs  lib.rs  logger.rs  result.rs
application-macro/: Cargo.toml
application-macro/src/: lib.rs
application-macros/: Cargo.toml
application-macros/src/: lib.rs  logger.rs
application-rs/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  config.toml.example  http-client.env.json
application-rs/application-api/: Cargo.toml
application-rs/application-api/src/: lib.rs  response.rs  routes.rs
application-rs/application-database/src/: lib.rs  macros.rs
application-rs/application-kernel/src/: config.rs  result.rs
application-rs/application-util/src/: http.rs  huawei.rs  wechat.rs
application-rs/database/: 03-migrate-to-tidb.sql  05-add-refresh_token.sql  07-add-sort-to-totp.sql
application-util/: Cargo.toml
application-util/src/: http.rs  huawei.rs  lib.rs  wechat.rs
application/src/: config.rs  lib.rs
application/src/api/: extract.rs  middleware.rs  mod.rs  response.rs  routes.rs
application/src/api/v1/: access_token.rs  short_url.rs  totp.rs  users.rs
application/src/bin_api/: extract.rs  middleware.rs  response.rs  routes.rs
application/src/bin_api/v1/: access_token.rs  short_url.rs  totp.rs  users.rs
application/src/model/: result.rs  wechat.rs
application/src/model/entity/: access_token.rs  totp.rs
application/src/repository/: access_token.rs  short_url.rs  third_user.rs  user.rs
application/src/request/: mod.rs
application/src/request/api/: access_token.rs  short_url.rs  totp.rs  user.rs
application/src/service/api/: access_token.rs  short_url.rs  totp.rs  user.rs
application/src/util/: http.rs
database/: 01-multi-platform-user.sql  02-change-bin.sql  03-migrate-to-tidb.sql  04-multi-platform-multi-app.sql  05-add-refresh_token.sql  05-huawei-oauth.sql  06-create-access_token-index.sql
huawei/atomicservice/MFA/: AGENTS.md  CHANGELOG.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
huawei/atomicservice/TOTP/: build-profile.json5  oh-package.json5
rs-application/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  api.http  env.example
rs-application/application-api/: Cargo.toml
rs-application/application-api-next/: Cargo.toml
rs-application/application-api-next/src/: lib.rs  response.rs  routes.rs
rs-application/application-api/src/: lib.rs  middleware.rs  response.rs  routes.rs
rs-application/application-api/src/request/: access_token.rs  mod.rs
rs-application/application-api/src/service/: access_token.rs  short_url.rs  user.rs
rs-application/application-api/src/v1/: access_token.rs  short_url.rs  totp.rs  users.rs
rs-application/application-database/src/: lib.rs
rs-application/application-kernel/: Cargo.toml
rs-application/application-kernel/src/: logger.rs  result.rs
rs-application/application-macro/src/: lib.rs  logger.rs
rs-application/application-util/: Cargo.toml
rust/: CHANGELOG.md
rust/application-api/src/: extract.rs  middleware.rs
rust/application-macro/: .gitignore
rust/database/: 02-change-bin.sql
src/: config.rs  lib.rs  logger.rs
src/bin_api/: middleware.rs  mod.rs  response.rs  routes.rs
src/bin_api/v1/: totp.rs
src/miniprogram_api/: middleware.rs  mod.rs  routes.rs
src/miniprogram_api/v1/: access_token.rs  short_url.rs  totp.rs  users.rs
src/model/: http.rs  mod.rs  result.rs  wechat.rs
src/model/entity/: access_token.rs  mod.rs  third_user.rs
src/model/miniprogram/: access_token.rs  mod.rs  third_user.rs  totp.rs  user.rs  wechat_access_token.rs
src/repository/: access_token.rs  mod.rs  short_url.rs  third_user.rs  totp.rs
src/repository/miniprogram/: access_token.rs  mod.rs  short_url.rs  third_user.rs  totp.rs  user.rs
src/request/: mod.rs
src/request/api/: access_token.rs  short_url.rs  totp.rs  user.rs
src/request/miniprogram/: access_token.rs  short_url.rs  totp.rs  user.rs
src/service/: mod.rs  wechat.rs
src/service/api/: access_token.rs  totp.rs  user.rs
src/service/miniprogram/: access_token.rs  short_url.rs  totp.rs  user.rs
src/util/: http.rs
src/wechat_miniprogram_api/: middleware.rs  routes.rs
src/wechat_miniprogram_api/v1/: access_token.rs  short_url.rs  totp.rs  users.rs
wechat/: .gitignore  AGENTS.md  CHANGELOG.md  biome.json  package.json  pnpm-lock.yaml  project.config.json  tsconfig.json
wechat/miniprogram/: app.json  app.scss  app.ts
wechat/miniprogram/api/: access-token.ts  accessToken.ts  short-url.ts  shortUrl.ts  totp.ts  user.ts
wechat/miniprogram/constant/: access-token.ts  accessToken.ts  app.ts  error.ts  shortUrl.ts  totp.ts  user.ts
wechat/miniprogram/custom-tab-bar/: index.wxml  index.wxss
wechat/miniprogram/models/: error.ts
wechat/miniprogram/types/: access-token.d.ts  (+7 more)
(+277 files in other folders)
