[workspace]
members = ["application-*"]
default-members = ["application-*"]
resolver = "3"

[workspace.package]
rust-version = "1.90.0"
version = "1.13.1"
edition = "2024"
publish = false

[workspace.dependencies]
chrono = { version = "~0.4.22", features = ["serde"] }
serde = { version = "~1.0.130", features = ["derive"] }
serde_json = { version = "~1.0.71" }

tracing = { version = "~0.1.37" }
tracing-subscriber = { version = "~0.3.16", default-features = false, features = ["registry"] }
tracing-appender = { version = "~0.2.3" }
