[package]
name = "application-database"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
application-kernel = { path = "../application-kernel" }
application-util = { path = "../application-util" }

chrono = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

sqlx = { version = "~0.8.0", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono" ] }

uuid = { version = "1.18.1", features = ["v7"] }
totp-rs = { version = "~5.7.0", features = ["otpauth"] }
