[package]
name = "application-kernel"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

config = { version = "~0.15.4", default-features = false, features = ["toml", "json", "json5"] }
