[package]
name = "application-util"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
application-kernel = { path = "../application-kernel" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

reqwest = { version = "~0.12.2" }
