[package]
name = "application"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bin-api"
path = "src/bin/bin-api.rs"

[dependencies]
application-kernel = { path = "../application-kernel" }

tracing = { workspace = true }

tokio = { version = "~1.45.0", features = ["full"] }
axum = { version = "~0.8.1", features = ["macros"] }
tower = { version = "~0.5.0" }
tower-http = { version = "~0.6.0", features = ["cors", "request-id", "trace"] }

url = { version = "~2.5.0" }
rs-snowflake = { version = "~0.6.0", default-features = false }