[package]
name = "application-api"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "application-api"
path = "src/bin/api.rs"

[dependencies]
application-kernel = { path = "../application-kernel" }
application-database = { path = "../application-database" }
application-util = { path = "../application-util" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

tokio = { version = "~1.48.0", features = ["full"] }
salvo = { version = "~0.85.0", features = ["cors", "request-id", "logging"] }
futures-util = "0.3.31"

murmurs = { version = "~1.0.5" }
base62 = { version = "~2.2.0" }
url = { version = "~2.5.0" }
totp-rs = { version = "~5.7.0", features = ["otpauth"] }
