[package]
name = "application-util"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
application-kernel = { path = "../application-kernel" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

reqwest = { version = "~0.13.1", features = ["form"] }
